--- a/style/main.css
+++ b/style/main.css
@@ -1,10 +1,15 @@
 body {
     background: hsl(0, 0%, 2%);
+    color: hsl(0, 100%, 100%);
+    text-align: center;
 }
 
 #board {
-    width: 640px;
-    height: 480px;
-    margin: auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#board canvas {
     background: hsl(0, 80%, 70%);
 }
